--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flex_color_scheme: ^6.1.2
   http: ^0.13.5
+  deep_pick: ^0.10.0
 
 dev_dependencies:
   flutter_test:
