--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   textfield_search: ^0.10.0
   dropdown_button2: ^2.0.0
   flutter_native_splash: ^2.2.18
+  recase: ^4.1.0
 
 flutter_native_splash:
   color: "#ffffff" #white
